# cocos-rs

./: Cargo.toml  README.md
crates/cocos/: Cargo.toml
crates/cocos/examples/: demo.rs
crates/cocos/src/: app.rs  lib.rs
crates/cocos/src/executor/: mod.rs  winit.rs
crates/cocos/src/graphics_context/: mod.rs
crates/cocos/src/graphics_context/pipeline/: mod.rs
crates/cocos/src/graphics_context/pipeline/deferred/: main_flow.rs  mod.rs
crates/cocos/src/pipeline/: mod.rs
crates/cocos/src/pipeline/deferred/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: error.rs  lib.rs  utils.rs
crates/renderer/src/frame_graph/: black_board.rs  callback_pass.rs  define.rs  device_pass.rs  graph.rs  handle.rs  mod.rs  pass.rs  pass_node.rs  pass_node_builder.rs  render_context.rs  render_target_attachment.rs  resource_data_table.rs  resource_node.rs  resource_table.rs  transient_resource_cache.rs  virtual_resources.rs
crates/renderer/src/frame_graph/define/: allocator.rs  mod.rs  texture.rs
crates/renderer/src/frame_graph/resource/: mod.rs  swap_chain.rs  texture.rs
crates/renderer/src/gfx_base/: allocator.rs  buffer.rs  camera.rs  color_attachment.rs  command_buffer.rs  common.rs  define.rs  device.rs  handle.rs  mod.rs  render_pass.rs  swap_chain.rs  texture.rs
crates/renderer/src/gfx_wgpu/: command_buffer.rs  device.rs  mod.rs  render_pass.rs  swap_chain.rs  texture_view.rs
crates/renderer/src/pipeline/: mod.rs
crates/renderer/src/pipeline/deferred/: main_flow.rs  mod.rs
